Fix height for overflow-scroll-y on navbar/sidebar

--- a/assets/less/fauxton.less
+++ b/assets/less/fauxton.less
@@ -348,7 +348,7 @@ table.databases {
 
 /* Fixed side navigation */
 #primary-navbar {
-  height: 100%;
+  height: 90%;
   position: fixed;
   width: @navWidth;
   top: 0;
